# geant4-lekid-muon-sim

./: .gitignore  CMakeLists.txt  LICENSE  README.md
data/: deflection_results.csv
include/: ActionInitialization.hh  DetectorConstruction.hh  GeometryConfig.hh  PrimaryGeneratorAction.hh  RunAction.hh  SteppingAction.hh
src/: ActionInitialization.cc  DetectorConstruction.cc  GeometryConfig.cc  PrimaryGeneratorAction.cc  RunAction.cc  SteppingAction.cc  main.cc
